# evalys-launchpad-adapters

./: .env.example  CHANGELOG.md  QUICKSTART.md  README.md  example.py  pyproject.toml  requirements.txt  setup.py
docs/: adapter-interface.md  compatibility.md
examples/: bonkfun-ghost-sell.py  pumpfun-ghost-buy.py
src/adapters/: __init__.py  base_adapter.py  bonkfun_adapter.py  generic_adapter.py  pumpfun_adapter.py
src/adapters/bonkfun/: README.md
src/adapters/pumpfun/: README.md
src/api/: routes.py  server.py
src/config/: settings.py
src/safety/: __init__.py  allowlist.py  sanitizer.py  validator.py
tests/: __init__.py  test_allowlist.py  test_golden.py
tests/fixtures/pumpfun/: buy_example.json  curve_state_example.json  sell_example.json
